package types

type ExerciseType struct {
	ID   int    `json:"id"`
	Name string `json:"name"`
}
