package types

type Language struct {
	ID   int    `json:"id"`
	Name string `json:"name"`
}
