package types

type Position struct {
	ID   int    `json:"id"`
	Name string `json:"name"`
}
